--- a/package.json
+++ b/package.json
@@ -48,10 +48,7 @@
     "eslint-plugin-react-native": "^3.2.1",
     "husky": "^1.2.0",
     "lint-staged": "^4.2.3",
-    "node-cmd": "^3.0.0",
-    "os": "^0.1.1",
-    "prettier": "^1.11.0",
-    "shared-modules": "./src/shared/"
+    "prettier": "^1.11.0"
   },
   "dependencies": {
     "snyk": "^1.116.2"
