--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "bignumber.js": "^7.2.1",
         "i18next": "^12.0.0",
-        "iota.lib.js": "^0.5.1",
+        "iota.lib.js": "git+https://git@github.com/iotaledger/iota.js#develop",
         "lodash": "^4.17.10",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
