--- a/src/mobile/android/app/build.gradle
+++ b/src/mobile/android/app/build.gradle
@@ -160,12 +160,7 @@ dependencies {
     implementation project(':react-native-device-info')
     implementation project(':react-native-extra-dimensions-android')
     implementation project(':react-native-os')
-    implementation(project(':react-native-camera')) {
-        exclude group: "com.google.android.gms:+"
-    }
-    implementation('com.google.android.gms:play-services-vision:10.2.0') {
-        force = true
-    }
+    implementation project(':react-native-camera')
     implementation project(':react-native-print')
     implementation project(':react-native-svg')
     implementation project(':react-native-navigation')
