--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -46,6 +46,7 @@
     "react-native": "0.57.5",
     "react-native-camera": "^1.5.1",
     "react-native-crypto": "^2.0.2",
+    "react-native-detect-navbar-android": "^0.2.0",
     "react-native-device-info": "^0.13.0",
     "react-native-document-picker": "^2.1.0",
     "react-native-dropdownalert": "https://github.com/cvarley100/react-native-dropdownalert#fc6655c4542e3b35da67ccca5f708adb0a7ccff8",
