--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -42,7 +42,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "bugsnag-build-reporter": "^1.0.1",
     "bugsnag-sourcemaps": "^1.1.0",
@@ -60,7 +60,7 @@
     "express": "^4.16.3",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "puppeteer": "^1.11.0",
     "react-dev-utils": "^7.0.1",
@@ -175,7 +175,9 @@
     "redux": "^4.0.0"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>scripts/setupEnzyme.js",
+    "setupFilesAfterEnv": [
+      "<rootDir>scripts/setupEnzyme.js"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
