--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -145,6 +145,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@babel/register": "^7.0.0",
+    "@jest-runner/electron": "^1.0.1",
     "@ledgerhq/hw-transport-node-hid": "^4.35.0",
     "argon2": "rihardsgravis/node-argon2#prebuild-release",
     "authenticator": "^1.1.5",
@@ -175,6 +176,8 @@
     "redux": "^4.0.0"
   },
   "jest": {
+    "runner": "@jest-runner/electron",
+    "testEnvironment": "@jest-runner/electron/environment",
     "setupFilesAfterEnv": [
       "<rootDir>scripts/setupEnzyme.js"
     ],
