Mobile: Update Jest config, replace deprecated option

--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -144,7 +144,9 @@
     "roots": [
       "../"
     ],
-    "setupTestFrameworkScriptFile": "./testConfig.js",
+    "setupFilesAfterEnv": [
+      "./testConfig.js"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/shared/"
