--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "concurrently --kill-others \"npm run devserver\" \"cross-env NODE_ENV=development electron -r @babel/register main.js\"",
     "postinstall": "electron-builder install-app-deps",
-    "devserver": "node scripts/devServer.js",
+    "devserver": "node scripts/webpackServer.js hot",
     "build:screenshots": "node scripts/screenshots.js",
     "build": "rimraf dist && concurrently \"npm run build-main\" \"npm run build-app\"",
     "build-main": "./node_modules/.bin/cross-env NODE_ENV=production webpack --env=production --config webpack.config/config.main.js",
@@ -61,6 +61,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
+    "jest-image-snapshot": "^2.8.0",
     "mini-css-extract-plugin": "^0.5.0",
     "puppeteer": "^1.11.0",
     "react-dev-utils": "^7.0.1",
@@ -145,7 +146,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@babel/register": "^7.0.0",
-    "@jest-runner/electron": "^1.0.1",
+    "@jest-runner/electron": "^1.0.3",
     "@ledgerhq/hw-transport-node-hid": "^4.35.0",
     "argon2": "rihardsgravis/node-argon2#prebuild-release",
     "authenticator": "^1.1.5",
@@ -177,9 +178,11 @@
   },
   "jest": {
     "runner": "@jest-runner/electron",
-    "testEnvironment": "@jest-runner/electron/environment",
+    "globalSetup": "<rootDir>scripts/jestSetup.js",
+    "globalTeardown": "<rootDir>scripts/jestTeardown.js",
+    "testEnvironment": "<rootDir>scripts/jestEnv.js",
     "setupFilesAfterEnv": [
-      "<rootDir>scripts/setupEnzyme.js"
+      "<rootDir>scripts/jestLibs.js"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
