--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -140,6 +140,7 @@
     "argon2": "rihardsgravis/node-argon2#prebuild-release",
     "authenticator": "^1.1.5",
     "babel-polyfill": "^6.26.0",
+    "base64-js": "^1.3.0",
     "bugsnag-js": "^4.7.3",
     "bugsnag-react": "^1.1.1",
     "classnames": "^2.2.6",
