--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -15,7 +15,7 @@
         "test:coverage": "nyc --check-coverage --lines 50 --statements 50 --functions 50 --branches 50 yarn test",
         "auditjs": "./../../node_modules/.bin/auditjs -nl error -w whitelist.json",
         "themes:sync": "node themes/sync.js",
-        "postinstall": "npm rebuild realm --build-from-source"
+        "postinstall": "node debian-rebuild-realm.js"
     },
     "license": "Apache-2.0 OR EPL-2.0",
     "dependencies": {
