Mobile, Shared: Dependency cleanup (#421)
* Shared: Clean up dependencies

* Desktop: Clean up dependencies

* Mobile: Update lockfile

* Mobile: Clean up unused dependencies

* Mobile: Remove more unused dependencies

* Mobile: Add missing dependency

* Remove unused dependency, add missing dependency

* Update lockfile

* Mobile: Remove more unused dependencies

* Mobile: Remove more dependencies

* Re-add missing dependency

* Revert unintended updates

* Revert desktop lockfile changes

* Remove unnecessary devDependencies from root dir

* Mobile: Remove unused dependency

* Mobile: Remove string_decoder

* Mobile: Re-add browser field of package.json

* Mobile/Android: Remove imports of unlinked dependencies

* Mobile/Android: Remove multidex

* Mobile/Android: Remove play-services-vision

* Mobile: Re-add react-native-detect-navbar-android

--- a/src/mobile/android/app/build.gradle
+++ b/src/mobile/android/app/build.gradle
@@ -97,7 +97,6 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         multiDexEnabled true
-        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -156,23 +155,14 @@ dependencies {
     implementation 'com.github.laumair:argon2jni:jitpack-SNAPSHOT'
     implementation project(':react-native-document-picker')
     implementation project(':nodejs-mobile-react-native')
-    implementation project(':react-native-fast-crypto')
-    implementation project(':react-native-modal-translucent')
     implementation project(':react-native-detect-navbar-android')
     implementation project(':react-native-fingerprint-scanner')
     implementation project(':react-native-keep-awake')
     implementation project(':react-native-device-info')
     implementation project(':react-native-extra-dimensions-android')
     implementation project(':react-native-os')
-    implementation(project(':react-native-camera')) {
-        exclude group: "com.google.android.gms:+"
-    }
-    implementation('com.google.android.gms:play-services-vision:10.2.0') {
-        force = true
-    }
+    implementation project(':react-native-camera')
     implementation project(':react-native-print')
-    implementation project(':react-native-udp')
-    implementation project(':react-native-tcp')
     implementation project(':react-native-svg')
     implementation project(':react-native-navigation')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -180,7 +170,6 @@ dependencies {
     implementation ('com.facebook.react:react-native:+')
     implementation project(':react-native-svg')
     implementation project(':react-native-keychain')
-    implementation 'com.android.support:multidex:1.0.1'
     implementation project(':lottie-react-native')
     implementation project(':react-native-exit-app')
     implementation project(':react-native-securerandom')
