Exclude unnecessary realm package contents in builds

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -77,7 +77,13 @@
     "files": [
       "dist/",
       "assets/",
-      "package.json"
+      "package.json",
+      "!node_modules/realm/android${/*}",
+      "!node_modules/realm/build${/*}",
+      "!node_modules/realm/react-native${/*}",
+      "!node_modules/realm/scripts${/*}",
+      "!node_modules/realm/src${/*}",
+      "!node_modules/realm/vendor${/*}"
     ],
     "appId": "org.iota.trinity",
     "asar": true,
