--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -21,11 +21,12 @@
     "ios:dev": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/react-native run-ios",
     "test": "REALM_DISABLE_ANALYTICS=true NODE_ENV=test ./node_modules/.bin/jest --forceExit --detectOpenHandles --maxWorkers=10",
     "nodejs-deps": "yarn --cwd nodejs-assets/nodejs-project",
-    "postinstall": "./node_modules/.bin/rn-nodeify --install crypto,http,os,path,stream,vm --hack && yarn nodejs-deps && patch-package",
+    "postinstall": "./node_modules/.bin/rn-nodeify --install crypto,http,os,path,stream,vm --hack && yarn nodejs-deps && patch-package && npm run fix-modal",
     "prepare-release": "yarn version && cd ios && bundle exec fastlane release && cd ../android && bundle exec fastlane release && cd .. && echo Successfully incremented version and build numbers! Please remember to run git add ., git commit, git push --tags, and git push",
     "auditjs": "./../../node_modules/.bin/auditjs -nl error -w whitelist.json",
     "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "prepare": "npm run snyk-protect",
+    "fix-modal": "node node_modules/react-native-modal-translucent/scripts/translucent-modal.js"
   },
   "dependencies": {
     "authenticator": "^1.1.3",
@@ -64,6 +65,7 @@
     "react-native-keychain": "2.0.0-rc",
     "react-native-markdown-renderer": "^3.2.1",
     "react-native-modal": "^7.0.1",
+    "react-native-modal-translucent": "^2.0.0",
     "react-native-navigation": "https://github.com/rajivshah3/react-native-navigation#2.0.255-0.57",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-os": "git+https://github.com/laumair/react-native-os.git#527b0ae",
