--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -77,7 +77,13 @@
     "files": [
       "dist/",
       "assets/",
-      "package.json"
+      "package.json",
+      "!node_modules/realm/android${/*}",
+      "!node_modules/realm/build${/*}",
+      "!node_modules/realm/react-native${/*}",
+      "!node_modules/realm/scripts${/*}",
+      "!node_modules/realm/src${/*}",
+      "!node_modules/realm/vendor${/*}"
     ],
     "appId": "org.iota.trinity",
     "asar": true,
@@ -145,7 +151,7 @@
     "classnames": "^2.2.6",
     "electron-settings": "^3.2.0",
     "electron-updater": "4.0.6",
-    "entangled-node": "rihardsgravis/entangled-node#v0.1.3",
+    "entangled-node": "rihardsgravis/entangled-node#v0.2.0",
     "hw-app-iota": "^0.5.1",
     "i18next": "^15.0.2",
     "iota.lib.js": "^0.5.1",
