--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -19,6 +19,10 @@
     },
     "license": "Apache-2.0 OR EPL-2.0",
     "dependencies": {
+        "@iota/bundle": "^1.0.0-alpha.912642aa",
+        "@iota/bundle-validator": "^1.0.0-alpha.912642aa",
+        "@iota/core": "^1.0.0-alpha.912642aa",
+        "@iota/signing": "^1.0.0-alpha.912642aa",
         "bignumber.js": "^8.0.1",
         "i18next": "^12.0.0",
         "iota.lib.js": "git+https://git@github.com/iotaledger/iota.js#develop",
@@ -56,8 +60,8 @@
         "figma-parser": "^0.0.2",
         "mocha": "^5.0.3",
         "nock": "^10.0.1",
-        "realm": "^2.21.0",
         "nyc": "^13.1.0",
+        "realm": "^2.21.0",
         "redux-mock-store": "^1.5.1",
         "sinon": "^7.1.1",
         "svg2ttf": "^4.1.0",
@@ -65,6 +69,6 @@
         "timekeeper": "^2.0.0"
     },
     "resolutions": {
-      "mem": ">=4.0.0"
+        "mem": ">=4.0.0"
     }
 }
