--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -21,7 +21,7 @@
     "ios:dev": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/react-native run-ios",
     "test": "REALM_DISABLE_ANALYTICS=true NODE_ENV=test ./node_modules/.bin/jest --forceExit --detectOpenHandles --maxWorkers=10",
     "nodejs-deps": "yarn --cwd nodejs-assets/nodejs-project",
-    "postinstall": "./node_modules/.bin/rn-nodeify --install crypto,http,os,path,stream,vm --hack && yarn nodejs-deps && patch-package && npm run fix-modal",
+    "postinstall": "./node_modules/.bin/rn-nodeify --install crypto,http,os,path,stream,vm --hack --yarn && yarn nodejs-deps && patch-package && npm run fix-modal",
     "prepare-release": "yarn version && cd ios && bundle exec fastlane release && cd ../android && bundle exec fastlane release && cd .. && echo Successfully incremented version and build numbers! Please remember to run git add ., git commit, git push --tags, and git push",
     "auditjs": "./../../node_modules/.bin/auditjs -nl error -w whitelist.json",
     "snyk-protect": "snyk protect",
@@ -98,7 +98,8 @@
     "tweetnacl-util": "^0.15.0",
     "util": "^0.10.3",
     "victory-native": "^30.3.0",
-    "vm-browserify": "0.0.4"
+    "vm-browserify": "0.0.4",
+    "@tradle/react-native-http": "^2.0.0"
   },
   "devDependencies": {
     "babel-jest": "24.0.0",
@@ -115,7 +116,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-test-renderer": "16.6.1",
-    "rn-nodeify": "^8.2.0"
+    "rn-nodeify": "^10.0.1"
   },
   "jest": {
     "preset": "react-native",
@@ -138,7 +139,7 @@
   },
   "react-native": {
     "crypto": "react-native-crypto",
-    "http": "react-native-http",
+    "http": "@tradle/react-native-http",
     "os": "react-native-os",
     "path": "path-browserify",
     "_stream_transform": "readable-stream/transform",
@@ -151,7 +152,7 @@
   },
   "browser": {
     "crypto": "react-native-crypto",
-    "http": "react-native-http",
+    "http": "@tradle/react-native-http",
     "os": "react-native-os",
     "path": "path-browserify",
     "_stream_transform": "readable-stream/transform",
