--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -19,9 +19,8 @@
     },
     "license": "Apache-2.0 OR EPL-2.0",
     "dependencies": {
-        "@iota/bundle": "^1.0.0-alpha.912642aa",
-        "@iota/bundle-validator": "^1.0.0-alpha.912642aa",
-        "@iota/core": "^1.0.0-alpha.912642aa",
+        "@iota/bundle": "1.0.0-alpha.912642aa",
+        "@iota/core": "1.0.0-alpha.912642aa",
         "@iota/signing": "1.0.0-alpha.912642aa",
         "bignumber.js": "^8.0.1",
         "i18next": "^12.0.0",
@@ -70,6 +69,7 @@
     },
     "resolutions": {
         "mem": ">=4.0.0",
-        "@iota/signing": "^1.0.0-alpha.912642aa"
+        "@iota/core/@iota/signing": "1.0.0-alpha.912642aa",
+        "@iota/core/@iota/bundle": "1.0.0-alpha.912642aa"
     }
 }
