--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -118,6 +118,14 @@
     "react-test-renderer": "16.6.1",
     "rn-nodeify": "^10.0.1"
   },
+  "resolutions": {
+    "@iota/bundle": "1.0.0-alpha.66ccc99f",
+    "@iota/core": "1.0.0-alpha.66ccc99f",
+    "@iota/signing": "1.0.0-alpha.66ccc99f",
+    "@iota/bundle-validator": "1.0.0-alpha.66ccc99f",
+    "@iota/core/@iota/signing": "1.0.0-alpha.66ccc99f",
+    "@iota/core/@iota/bundle": "1.0.0-alpha.66ccc99f"
+  },
   "jest": {
     "preset": "react-native",
     "roots": [
