--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -19,9 +19,7 @@
     },
     "license": "Apache-2.0 OR EPL-2.0",
     "dependencies": {
-        "@iota/bundle": "1.0.0-alpha.a09e7908",
-        "@iota/core": "1.0.0-alpha.a09e7908",
-        "@iota/signing": "1.0.0-alpha.a09e7908",
+        "@iota/core": "^1.0.0-beta.10",
         "bignumber.js": "^8.0.1",
         "i18next": "^12.0.0",
         "iota.lib.js": "git+https://git@github.com/iotaledger/iota.js#develop",
@@ -68,9 +66,6 @@
         "timekeeper": "^2.0.0"
     },
     "resolutions": {
-        "mem": ">=4.0.0",
-        "@iota/core/@iota/signing": "1.0.0-alpha.a09e7908",
-        "@iota/core/@iota/bundle": "1.0.0-alpha.a09e7908",
-        "@iota/signing": "1.0.0-alpha.a09e7908"
+        "mem": ">=4.0.0"
     }
 }
