--- a/src/mobile/android/settings.gradle
+++ b/src/mobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'iotaWallet'
+include ':react-native-qr-generator'
+project(':react-native-qr-generator').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-qr-generator/android')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 include ':react-native-qr-scanner'
