--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -71,8 +71,8 @@
     "react-native-os": "git+https://github.com/laumair/react-native-os.git#527b0ae",
     "react-native-print": "^0.5.0",
     "react-native-progress": "^3.4.0",
+    "react-native-qr-generator": "^1.0.3",
     "react-native-qr-scanner": "^1.3.2",
-    "react-native-qrcode-svg": "^5.0.3",
     "react-native-randombytes": "^3.2.0",
     "react-native-safe-area-view": "^0.9.0",
     "react-native-securerandom": "^0.1.1",
