--- a/src/mobile/android/app/src/main/AndroidManifest.xml
+++ b/src/mobile/android/app/src/main/AndroidManifest.xml
@@ -3,17 +3,13 @@
           xmlns:tools="http://schemas.android.com/tools"
           android:versionCode="1"
           android:versionName="0.1.0">
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
-
     <uses-sdk
         tools:overrideLibrary="com.rnprint.RNPrint"/>
-
     <application
         android:name="com.iota.trinity.MainApplication"
         android:allowBackup="false"
@@ -45,6 +41,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="iota" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
