--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -29,6 +29,7 @@
     "fix-modal": "node node_modules/react-native-modal-translucent/scripts/translucent-modal.js"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.0",
     "authenticator": "^1.1.3",
     "axios": "^0.18.0",
     "bugsnag-react-native": "^2.11.0",
@@ -42,9 +43,9 @@
     "prop-types": "^15.6.0",
     "punycode": "^1.4.1",
     "qr.js": "https://github.com/defunctzombie/qr.js",
-    "react": "16.6.1",
+    "react": "16.6.3",
     "react-i18next": "^8.0.7",
-    "react-native": "0.57.5",
+    "react-native": "0.58.6",
     "react-native-camera": "^1.5.1",
     "react-native-crypto": "^2.0.2",
     "react-native-detect-navbar-android": "^0.2.0",
@@ -98,8 +99,7 @@
     "tweetnacl-util": "^0.15.0",
     "util": "^0.10.3",
     "victory-native": "^30.3.0",
-    "vm-browserify": "0.0.4",
-    "@tradle/react-native-http": "^2.0.0"
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "babel-jest": "24.0.0",
@@ -115,7 +115,7 @@
     "patch-package": "^6.0.2",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
-    "react-test-renderer": "16.6.1",
+    "react-test-renderer": "16.6.3",
     "rn-nodeify": "^10.0.1"
   },
   "jest": {
