--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -67,7 +67,7 @@
     "react-native-markdown-renderer": "^3.2.1",
     "react-native-modal": "^7.0.1",
     "react-native-modal-translucent": "^2.0.0",
-    "react-native-navigation": "https://github.com/rajivshah3/react-native-navigation#2.0.255-0.57",
+    "react-native-navigation": "^2.13.0",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-os": "git+https://github.com/laumair/react-native-os.git#527b0ae",
     "react-native-print": "^0.5.0",
