--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -29,6 +29,7 @@
     "fix-modal": "node node_modules/react-native-modal-translucent/scripts/translucent-modal.js"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.0",
     "authenticator": "^1.1.3",
     "axios": "^0.18.0",
     "bugsnag-react-native": "^2.11.0",
@@ -98,8 +99,7 @@
     "tweetnacl-util": "^0.15.0",
     "util": "^0.10.3",
     "victory-native": "^30.3.0",
-    "vm-browserify": "0.0.4",
-    "@tradle/react-native-http": "^2.0.0"
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.2.3",
@@ -108,7 +108,7 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-stage-0": "^7.0.0-beta",
     "cross-env": "^5.2.0",
-    "detox": "^9.0.4",
+    "detox": "^10.0.10",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "jest": "24.0.0",
