--- a/src/mobile/ios/Podfile
+++ b/src/mobile/ios/Podfile
@@ -4,7 +4,7 @@
 target 'iotaWallet' do
     # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
     use_frameworks!
-pod 'CatCrypto', '~> 0.3.0'
+pod 'CatCrypto', :git => 'https://github.com/rajivshah3/CatCrypto.git', :branch => 'fix/commoncrypto'
 
     target 'iotaWalletTests' do
         inherit! :search_paths
