--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -59,6 +59,7 @@
         "nock": "^10.0.1",
         "nyc": "^13.1.0",
         "realm": "^2.21.0",
+        "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.1",
         "sinon": "^7.2.7",
         "svg2ttf": "^4.1.0",
