Update whitelists and audit scripts

--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -13,7 +13,7 @@
         "test": "NODE_ENV=test ./node_modules/.bin/mocha --timeout 5000 --exit --require @babel/register \"__tests__/**/*.spec.js\"",
         "test:watch": "yarn test --watch",
         "test:coverage": "nyc --check-coverage --lines 50 --statements 50 --functions 50 --branches 50 yarn test",
-        "auditjs": "./../../node_modules/.bin/auditjs -nl error -w whitelist.json",
+        "auditjs": "./../../node_modules/.bin/auditjs -n -l error -w whitelist.json",
         "themes:sync": "node themes/sync.js",
         "postinstall": "node debian-rebuild-realm.js"
     },
