--- a/.prettierignore
+++ b/.prettierignore
@@ -4,3 +4,5 @@ src/mobile/logo-spin/logo-spin-glow-blnk.hyperesources
 package.json
 src/shared/locales/*
 !src/shared/locales/en/translation.json
+src/desktop/dist/*
+npm-shrinkwrap.json
