--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -29,6 +29,7 @@
     "fix-modal": "node node_modules/react-native-modal-translucent/scripts/translucent-modal.js"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.0",
     "authenticator": "^1.1.3",
     "axios": "^0.18.0",
     "bugsnag-react-native": "^2.11.0",
@@ -69,6 +70,7 @@
     "react-native-navigation": "https://github.com/rajivshah3/react-native-navigation#2.0.255-0.57",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-os": "git+https://github.com/laumair/react-native-os.git#527b0ae",
+    "react-native-picker-select": "^6.1.0",
     "react-native-print": "^0.5.0",
     "react-native-progress": "^3.4.0",
     "react-native-qr-generator": "^1.0.3",
@@ -98,8 +100,7 @@
     "tweetnacl-util": "^0.15.0",
     "util": "^0.10.3",
     "victory-native": "^30.3.0",
-    "vm-browserify": "0.0.4",
-    "@tradle/react-native-http": "^2.0.0"
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "babel-jest": "24.0.0",
