--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -29,6 +29,7 @@
     "fix-modal": "node node_modules/react-native-modal-translucent/scripts/translucent-modal.js"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.0",
     "authenticator": "^1.1.3",
     "axios": "^0.18.0",
     "bugsnag-react-native": "^2.11.0",
@@ -85,7 +86,7 @@
     "react-native-view-shot": "git+https://github.com/cvarley100/react-native-view-shot#master",
     "react-redux": "^5.0.6",
     "readable-stream": "^1.0.33",
-    "realm": "^2.21.0",
+    "realm": "^2.26.1",
     "redux": "^3.7.2",
     "rn-fetch-blob": "https://github.com/rajivshah3/rn-fetch-blob#10.13-226",
     "shared-modules": "../shared/",
@@ -98,8 +99,7 @@
     "tweetnacl-util": "^0.15.0",
     "util": "^0.10.3",
     "victory-native": "^30.3.0",
-    "vm-browserify": "0.0.4",
-    "@tradle/react-native-http": "^2.0.0"
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "babel-jest": "24.0.0",
