--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -151,7 +151,7 @@
     "classnames": "2.2.6",
     "electron-settings": "3.2.0",
     "electron-updater": "4.0.6",
-    "entangled-node": "rihardsgravis/entangled-node#87142d9",
+    "entangled-node": "rihardsgravis/entangled-node#v0.2.2",
     "hw-app-iota": "0.6.1",
     "i18next": "15.0.4",
     "iota.lib.js": "0.5.1",
