--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -29,6 +29,7 @@
     "fix-modal": "node node_modules/react-native-modal-translucent/scripts/translucent-modal.js"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.0",
     "axios": "^0.18.0",
     "bugsnag-react-native": "^2.11.0",
     "events": "^1.1.1",
@@ -61,7 +62,7 @@
     "react-native-is-device-rooted": "https://github.com/rajivshah3/react-native-isDeviceRooted#latest",
     "react-native-keep-awake": "^2.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
-    "react-native-keychain": "2.0.0-rc",
+    "react-native-keychain": "3.0.0",
     "react-native-markdown-renderer": "^3.2.1",
     "react-native-modal": "^7.0.1",
     "react-native-modal-translucent": "^2.0.0",
