--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -156,6 +156,7 @@
     "iota.lib.js": "0.5.1",
     "kdbxweb": "1.2.6",
     "keytar": "4.4.1",
+    "lottie-web": "^5.5.2",
     "machine-uuid-sync": "https://github.com/rajivshah3/machine-uuid-sync#a5ffa8e",
     "perfect-scrollbar": "1.4.0",
     "qr.js": "0.0.0",
