--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -38,8 +38,7 @@
     "reselect": "^4.0.0",
     "url-parse": "^1.4.3",
     "valid-url": "^1.0.9",
-    "zxcvbn": "^4.4.2",
-    "snyk": "^1.161.1"
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta",
@@ -66,6 +65,7 @@
     "redux-mock-store": "^1.5.1",
     "rimraf": "^2.6.3",
     "sinon": "^7.2.7",
+    "snyk": "^1.161.1",
     "svg2ttf": "^4.1.0",
     "svgicons2svgfont": "^9.0.2",
     "timekeeper": "^2.0.0"
