--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "concurrently --kill-others \"npm run devserver\" \"cross-env NODE_ENV=development electron -r @babel/register main.js\"",
     "postinstall": "electron-builder install-app-deps",
-    "devserver": "node scripts/webpackServer.js hot",
+    "devserver": "node scripts/webpackServer.js",
     "build": "rimraf dist && concurrently \"npm run build-main\" \"npm run build-app\"",
     "build-main": "./node_modules/.bin/cross-env NODE_ENV=production webpack --env=production --config webpack.config/config.main.js",
     "build-app": "./node_modules/.bin/cross-env NODE_ENV=production webpack --env=production --config webpack.config/config.app.js",
@@ -32,7 +32,7 @@
     "auditjs": "./../../node_modules/.bin/auditjs -n -l error -w whitelist.json",
     "prepare-release": "yarn version && echo Successfully incremented version number! Please remember to run git add ., git commit, git push --tags, and git push",
     "release": "./node_modules/.bin/cross-env CSC_IDENTITY_AUTO_DISCOVERY=false build -mwl",
-    "test": "jest  --updateSnapshot"
+    "test": "npm run build-app && jest"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -60,17 +60,18 @@
     "express": "4.16.4",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "jest-image-snapshot": "^2.8.1",
     "mini-css-extract-plugin": "0.6.0",
     "puppeteer": "1.15.0",
-    "react-dev-utils": "9.0.0",
+    "react-dev-utils": "9.0.1",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "2.6.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "4.30.0",
+    "webpack": "4.31.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "3.3.2",
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.4"
@@ -151,11 +152,11 @@
   },
   "dependencies": {
     "@babel/register": "7.4.4",
+    "@bugsnag/js": "^6.2.0",
+    "@bugsnag/plugin-react": "^6.2.0",
     "@ledgerhq/hw-transport-node-hid": "4.54.0",
     "argon2": "rihardsgravis/node-argon2#ae1a860",
     "babel-polyfill": "6.26.0",
-    "bugsnag-js": "4.7.3",
-    "bugsnag-react": "1.1.1",
     "classnames": "2.2.6",
     "electron-settings": "3.2.0",
     "electron-updater": "4.0.6",
@@ -199,6 +200,9 @@
     "moduleNameMapper": {
       "\\.(scss)$": "<rootDir>/__mocks__/styleMock.js",
       "\\.(svg)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    },
+    "transformIgnorePatterns": [
+      "node_modules/react-qr-reader/"
+    ]
   }
 }
