--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "resolutions": {
     "request": ">=2.88.0",
-    "node.extend": ">=1.1.7"
+    "node.extend": ">=1.1.7",
+    "fstream": ">=1.0.12"
   },
   "snyk": true,
   "husky": {
