--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -65,6 +65,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
+    "usb": "1.5.0",
     "webpack": "4.31.0",
     "webpack-cli": "3.3.2",
     "webpack-dev-middleware": "3.7.0",
