--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -23,7 +23,7 @@
     "postinstall": "electron-builder install-app-deps",
     "devserver": "node server.js",
     "style:shots": "node scripts/puppeteer.js",
-    "build": "rimraf dist && concurrently \"npm run build-main\" \"npm run build-app\"",
+    "build": "rimraf dist && npm run build-main && npm run build-app",
     "build-main": "./node_modules/.bin/cross-env NODE_ENV=production webpack --env=production --config webpack.config/config.main.js",
     "build-app": "./node_modules/.bin/cross-env NODE_ENV=production webpack --env=production --config webpack.config/config.app.js",
     "compile": "npm run build && npm run compile:linux && npm run compile:mac && npm run compile:win",
