--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -23,7 +23,7 @@
     "@iota/core": "^1.0.0-beta.11",
     "bignumber.js": "^8.1.1",
     "i18next": "^12.0.0",
-    "iota.lib.js": "git+https://git@github.com/iotaledger/iota.js#develop",
+    "iota.lib.js": "^0.5.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.25",
