--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -59,7 +59,7 @@
     "mocha": "^5.0.3",
     "nock": "^10.0.1",
     "nyc": "^14.1.1",
-    "realm": "^2.21.0",
+    "realm": "2.27.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "rimraf": "^2.6.3",
