chore: fix "Duplicate module name" issue

--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -137,6 +137,11 @@
     },
     "transformIgnorePatterns": [
       "node_modules/?!(react-native|shared-modules)/"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/ios/build/",
+      "<rootDir>/android/build/",
+      "<rootDir>/nodejs-assets/"
     ]
   },
   "react-native": {
