chore: fix typo in contributor's name

--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -6,7 +6,7 @@
   "author": "IOTA Foundation",
   "contributors": [
     "Manuel Bieh <info@manuelbieh.de>",
-    "Umair Safraz",
+    "Umair Sarfraz",
     "Charlie Varley"
   ],
   "scripts": {
