- Allow to change install directory - Delete `appData` on uninstall

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -115,6 +115,11 @@
         }
       ]
     },
+    "nsis": {
+      "oneClick": false, 
+      "allowToChangeInstallationDirectory": true,
+      "deleteAppDataOnUninstall": true
+    },
     "win": {
       "publisherName": "IOTA Stiftung",
       "target": "nsis"
