Desktop: Windows installer updates (#1726)
* - Allow to change install directory
- Delete `appData` on uninstall

* Remove `allowToChangeInstallationDirectory` flag

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -115,6 +115,9 @@
         }
       ]
     },
+    "nsis": {
+      "deleteAppDataOnUninstall": true
+    },
     "win": {
       "publisherName": "IOTA Stiftung",
       "target": "nsis"
