--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -48,6 +48,7 @@
     "electron": "4.2.3",
     "electron-builder": "20.43.0",
     "electron-devtools-installer": "2.2.4",
+    "electron-notarize": "^0.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
@@ -137,7 +138,8 @@
       "target": [
         "dmg",
         "zip"
-      ]
+      ],
+      "entitlements": "./entitlements.mac.plist"
     },
     "publish": {
       "provider": "generic",
