Desktop/macOS: Enable hardened runtime

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -139,7 +139,8 @@
         "dmg",
         "zip"
       ],
-      "entitlements": "./entitlements.mac.plist"
+      "entitlements": "./entitlements.mac.plist",
+      "hardenedRuntime": true
     },
     "publish": {
       "provider": "generic",
