--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -142,6 +142,7 @@
         "zip"
       ],
       "entitlements": "./entitlements.mac.plist",
+      "entitlementsInherit": "./entitlements.mac.plist",
       "hardenedRuntime": true,
       "gatekeeperAssess": false
     },
