Desktop: Lock new dependencies to exact versions

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -48,7 +48,7 @@
     "electron": "4.2.3",
     "electron-builder": "20.43.0",
     "electron-devtools-installer": "2.2.4",
-    "electron-notarize": "^0.1.1",
+    "electron-notarize": "0.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
@@ -58,7 +58,7 @@
     "jest": "^24.8.0",
     "jest-image-snapshot": "^2.8.2",
     "mini-css-extract-plugin": "0.7.0",
-    "patch-package": "^6.1.2",
+    "patch-package": "6.1.2",
     "puppeteer": "1.17.0",
     "react-dev-utils": "9.0.1",
     "regenerator-runtime": "^0.13.2",
