Desktop/Windows: Use DigiCert timestamp server

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -123,7 +123,8 @@
     },
     "win": {
       "publisherName": "IOTA Stiftung",
-      "target": "nsis"
+      "target": "nsis",
+      "timeStampServer": "http://timestamp.digicert.com"
     },
     "linux": {
       "target": [
