Add `patch-package` back to dependencies

--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -57,6 +57,7 @@
     "jest": "^24.8.0",
     "jest-image-snapshot": "^2.8.2",
     "mini-css-extract-plugin": "0.7.0",
+    "patch-package": "6.1.2",
     "puppeteer": "1.17.0",
     "react-dev-utils": "9.0.1",
     "regenerator-runtime": "^0.13.2",
